Convert to StringUtils#isBlank